[refactor] change configs and stylings

--- a/_config.yml
+++ b/_config.yml
@@ -20,20 +20,20 @@ title                    : Kişisel Blogum
 email                    : ibrahimmdogann@gmail.com
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "İbrahim Doğan"
+description              : "Kişisel blogum, yazılım, teknoloji ve deneyimlerim."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-# breadcrumbs            : false # true, false (default)
+breadcrumbs            : true # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
+  provider               : disqus # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
-    shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : "ibrahimdogan-net" # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -104,7 +104,7 @@ analytics:
 author:
   name   : "İbrahim Doğan"
   avatar : "/assets/images/bio-photo.png"
-  bio    : "Kısaca; bilgisayar mühendisi, yazılımcı, pozitif düşünmeyi, gülmeyi seven ve sorunlara pratik çözümler getirmekten hoşlanan biriyim."
+  bio    : "Kısaca; bilgisayar mühendisi, IoT tutkunu, pozitif düşünmeyi, gülmeyi seven ve sorunlara pratik çözümler getirmekten hoşlanan biriyim."
   location         : "İstanbul / Türkiye"
   email            : "ibrahimmdogann@gmail.com"
   links:
@@ -279,6 +279,6 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
